--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,9 +21,14 @@ a{
     color: inherit;
 }
 
-/* .container {
-    background-color: rebeccapurple;
+.container {
+   
     width: 1356px;
     margin:auto;
-    padding-left: 5px;
-} */
+    padding-left: 50px;
+    padding-right: 50px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
